--- a/assets/common.css
+++ b/assets/common.css
@@ -53,7 +53,7 @@ h2{
 
 .face {
    position:absolute;top: 55%;
-   left: 50%; width: 40%; width: 60%;
+   left: 50%;width: 60%;
    transform: translate(-50%, -50%);
     }
 
@@ -222,7 +222,7 @@ h2{
 
       @media screen and (max-width: 700px) {
         .slider-container {
-          width: 110%; padding: 0px; height: 60%;
+          width: 100%; padding: 0px; height: 60%;
       }}
       
       .slider {
@@ -250,10 +250,10 @@ h2{
       
       .slide {
         display: flex;
-        justify-content: end;
+        justify-content: center;
         align-items: baseline;
         flex-shrink: 0; padding-bottom: 0px; margin-bottom: 0px;
-        width: 100%;
+        width: 100%;float: left;
         height: 330px;
         scroll-snap-align: center;
         margin-right: 0px;
@@ -263,7 +263,7 @@ h2{
       
       .slide__text {
         font-size: 21px; padding-left: 150px; padding-right: 150px; padding-top: 40px;
-        padding-bottom: 0px; font-family: 'Source Code Pro';
+        padding-bottom: 0px; font-family: 'Source Code Pro'; width: 100%;
       }
 
       @media screen and (max-width: 700px) {
@@ -317,7 +317,7 @@ h2{
         position: absolute;
         bottom: 5%;
         left: 50%;
-        width: 900px;
+        width: 100%;
         margin-left: -100px;
         text-align: center;
       }
